--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,8 @@ replay_pid*
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -112,7 +113,7 @@ buildNumber.properties
 .classpath
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -134,3 +135,5 @@ buildNumber.properties
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+# Application sensitive config
+chat-backend/src/main/resources/application.properties
